--- a/Wavez/Waves-Site/style.css
+++ b/Wavez/Waves-Site/style.css
@@ -7,7 +7,11 @@ body {
     font-family: "Noto sans JP", sans-serif;
     padding: 0% 5%;
 }
-
+.topnav input[type=text] {
+    font-size: 18px;
+    margin-top: 13px;
+    margin-right: 13px;
+}
 ul.topnav, ul.header{
     list-style-type: none;
     margin: 0;
@@ -37,4 +41,32 @@ ul.topnav li a:hover{
 }
 #content {
     padding: 3%;
+}
+.left-column {
+    float: left;
+    width: 25%;
+    height: 280px;
+    margin-right: 5%;
+}
+.middle-column {
+    float: left;
+    width: 30%;
+    height: 280px;
+    margin-right: 5%;
+}
+.right-column {
+    float: right;
+    width: 30%;
+    height: 280px;
+}
+.middle-column, .right-column{
+    background-color: white;
+    color: black;
+    padding: 5px;
+}
+.middle-column:hover, .right-column:hover{
+    border: 1px solid black;
+}
+.center {
+    margin: auto;
 }
