--- a/Wavez/Waves-Site/search.css
+++ b/Wavez/Waves-Site/search.css
@@ -33,6 +33,7 @@
 .img-box {
     display: flex;
     justify-content: center;
+    align-items: center;
     height: 120px;
     width: 120px;
     margin-right: 8px;
